Fixed Grainne's corrections.

--- a/theend.tex
+++ b/theend.tex
@@ -1,10 +1,10 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % theend.tex - Ian Huston
-% $Id: theend.tex,v 1.17 2009/11/22 18:32:41 ith Exp $
+% $Id: theend.tex,v 1.18 2009/11/22 23:15:25 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}%
-{\version$Id: theend.tex,v 1.17 2009/11/22 18:32:41 ith Exp $}
+{\version$Id: theend.tex,v 1.18 2009/11/22 23:15:25 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -236,7 +236,7 @@ perturbations at early times, their evolution is that of a damped harmonic
 oscillator similar to the first order evolution.
 
 We have shown that the magnitude of the source term can be important throughout the
-full evolution and that it is not sufficient to only calculate this term for
+full evolution and that it is not sufficient to calculate this term only for
 modes either entirely inside or outside the horizon, \iec taking a short or long
 wavelength approximation respectively. By solving the evolution equations of the
 inflaton field perturbation we have been able to access both of these
@@ -275,7 +275,7 @@ multi-field calculation are taken.
 In the past, a numerical calculation on the scale we have achieved would have been
 the preserve of dedicated supercomputing facilities. We have demonstrated that a
 calculation of this scope is now possible using relatively modest local resources.
-Looking forward, as the computational power available continues to improve, the
+Looking forward, as the computational power available continues to increase, the
 second order numerical calculation may become as straightforward to utilise as the
 first order one is now. 
 
