Change to capitals in title and fixed college name.

--- a/title.tex
+++ b/title.tex
@@ -1,11 +1,11 @@
 % % % % % % % % % % % % % % % % % % % % % % % 
 % title.tex - Ian Huston
-% $Id: title.tex,v 1.7 2009/11/19 18:56:07 ith Exp $
+% $Id: title.tex,v 1.8 2009/11/26 16:12:13 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.7 2009/11/19 18:56:07 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: title.tex,v 1.8 2009/11/26 16:12:13 ith Exp $}
 % 
-\college{Queen Mary}
+\college{Queen Mary, }
 % 
 % 
 \department{Mathematical Sciences}
@@ -15,20 +15,20 @@
 % 
 % 
 % 
-\title{Constraining inflationary scenarios with braneworld models and second order cosmological
-perturbations}
+\title{Constraining Inflationary Scenarios with Braneworld Models and Second Order
+Cosmological Perturbations}
 % 
 % 
 \author{Ian Huston}
 % 
 % 
-\hypersetup{pdftitle={Constraining inflationary scenarios with braneworld models and second order
-cosmological perturbations},pdfauthor={Ian Huston}}
+\hypersetup{pdftitle={Constraining Inflationary Scenarios with Braneworld Models and
+Second Order Cosmological Perturbations},pdfauthor={Ian Huston}}
 % 
 
 \declaration{%
 I hereby certify that this thesis, which is approximately 45,000 words in length,
-has been written by me, that it is the record of the work carried out by me at the
+has been written by me; that it is the record of the work carried out by me at the
 Astronomy Unit, Queen Mary, University of London, and that it has not been submitted
 in any previous application for a higher degree.
 \\
